<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Practise App Widget Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spinners">Spinners</string>
    <string name="checkboxes">CheckBoxes</string>
    <string name="radiobuttonsanddialogs">Radio Buttons and Dialogs</string>
    <string name="imacheckbox">I\'m a checkbox</string>
    <string name="unclick">UnClick</string>
    <string name="click">Click</string>

    <string name="choice1">Choice 1</string>
    <string name="choice2">Choice 2</string>
    <string name="choice3">Choice 3</string>

    <string-array name="populatedlist">
        <item>@string/choice1</item>
        <item>@string/choice2</item>
        <item>@string/choice3</item>
    </string-array>
</resources>
