<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewradio"
        android:hint="nothing happened yet!"
        android:textSize="18sp"
        android:layout_above="@+id/checkBox"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/titlelbl">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unclick"
        android:id="@+id/radioButton2"
        android:checked="false"
        android:onClick="onRadioButtonClicked"
        android:layout_marginTop="90dp"
        android:layout_below="@+id/textClock"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="48dp" />

        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click"
        android:id="@+id/radioButton"
        android:checked="false"
        android:onClick="onRadioButtonClicked"
        android:layout_alignTop="@+id/radioButton2"
        android:layout_alignStart="@+id/textViewradio" />
    </RadioGroup>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imacheckbox"
        android:id="@+id/checkBox"
        android:checked="false"
        android:onClick="onCheckBoxClicked"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/radioGroup"
        android:layout_alignStart="@+id/radioGroup" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/checkboxmessage"
        android:hint="check box message"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textViewradio" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Practise Of Android Widgets"
        android:id="@+id/titlelbl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/radiobuttonsanddialogs"
        android:id="@+id/radiodialoglbl"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/titlelbl"
        android:layout_alignEnd="@+id/checkboxmessage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/checkboxes"
        android:id="@+id/checkboxlbl"
        android:layout_alignTop="@+id/checkBox"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:entries="@array/populatedlist"
        android:layout_marginTop="99dp"
        android:layout_below="@+id/checkboxmessage"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/selectedmessage"
        android:hint="Selected Message Not Made Yet!"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/spinner"
        android:layout_alignStart="@+id/titlelbl" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Spinners Test"
        android:id="@+id/spinnerslbl"
        android:layout_below="@+id/checkboxmessage"
        android:layout_alignParentStart="true"
        android:layout_marginTop="63dp" />

</RelativeLayout>
